# lucidadl

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.cmd  schedule.ps1  selftest.py  setup.cmd
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
inputs/: albums.txt.example  tracks.txt.example
lucidadl/: __init__.py  api.py  cli.py  downloader.py  matching.py  organize.py  paths.py  progress.py  session.py  transcode.py  tui.py  utils.py
