[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lucidadl"
version = "0.1.0"
description = "Fast, parallel CLI music downloader for lucida.to (Qobuz, Amazon Music) with local transcoding and playlist import."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jude-A" }]
keywords = ["music", "downloader", "lucida", "qobuz", "amazon", "flac", "cli", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
dependencies = [
    "playwright>=1.40",
    "click>=8.1",
    "httpx[http2]>=0.27",
    "pyjson5>=1.6",
    "imageio-ffmpeg>=0.4",
    "mutagen>=1.45",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
lucida = "lucidadl.cli:cli"
lucidadl = "lucidadl.cli:cli"

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/Jude-A/lucidadl"
Repository = "https://github.com/Jude-A/lucidadl"
Issues = "https://github.com/Jude-A/lucidadl/issues"
Changelog = "https://github.com/Jude-A/lucidadl/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["lucidadl"]
